compiling_error.txt
/home/carlos/Desktop/backup/ProgramasC++/Lab4-Grupo5/main.cpp: In function ‘int main(int, const char**)’:
/home/carlos/Desktop/backup/ProgramasC++/Lab4-Grupo5/main.cpp:54:55: error: ‘moverF’ was not declared in this scope
     moverF(frontal,derecha,izquierda,superior,inferior);
                                                       ^
/home/carlos/Desktop/backup/ProgramasC++/Lab4-Grupo5/main.cpp: In function ‘void moverHorario(char**, char**, char**, char**, char**)’:
/home/carlos/Desktop/backup/ProgramasC++/Lab4-Grupo5/main.cpp:160:44: error: ‘matrix’ was not declared in this scope
                    frontal[i][n - j - 1] = matrix[i][j];
                                            ^~~~~~
/home/carlos/Desktop/backup/ProgramasC++/Lab4-Grupo5/main.cpp: At global scope:
/home/carlos/Desktop/backup/ProgramasC++/Lab4-Grupo5/main.cpp:168:1: error: expected declaration before ‘}’ token
 }
 ^
